# TSS_2025_Ondrusova

./: CMakeLists.txt  CMakeUserPresets.json  DesignFile_lite.md  README.md  SRS.md  URS_lite.md
src/: CropDialog.cpp  CropDialog.h  Photo.cpp  Photo.h  PhotoDetailDialog.cpp  PhotoDetailDialog.h  PhotoEditDialog.cpp  PhotoEditDialog.h  PhotoExportDialog.cpp  PhotoExportDialog.h  PhotoMetaData.cpp  PhotoMetaData.h  PhotoTableModel.cpp  PhotoTableModel.h  TSS_App.cpp  TSS_App.h  TSS_App.qrc  TSS_App.ui  ThemeUtils.cpp  ThemeUtils.h  main.cpp
tests/: TestTSSAppGUI.cpp  TestTSSAppIntegration.cpp  TestTSSAppUnit.cpp
